<resources>

    <!-- 共用的 -->
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>

    <!-- 主界面 -->
    <string name="main_screen_shot">截屏</string>
    <string name="main_captcha">图形验证码</string>
    <string name="main_crypto">加解密</string>
    <string name="main_check_emulator">检测模拟器</string>

    <!-- 截屏 -->
    <string name="screen_shot_system">监听系统截屏</string>
    <string name="screen_shot_system_cancel">取消监听系统截屏</string>
    <string name="screen_shot_permission">如果您拒绝此权限，将无法监听系统截屏，请点击授予权限。</string>
    <string name="screen_shot_result">捕获到系统截屏，截屏路径：</string>

    <!-- 图形验证码 -->
    <string name="captcha_hint">请输入验证码</string>
    <string name="captcha_correct">验证码正确</string>
    <string name="captcha_wrong">验证码错误</string>

    <!-- 对称加密 -->
    <string name="crypto_title_symmetric">对称加密</string>
    <string name="crypto_key_hint">请输入密钥</string>
    <string name="crypto_iv_hint">请输入偏移量，ECB模式不用填写</string>
    <string name="crypto_data_hint">请输入待加密或待解密的数据</string>
    <string name="crypto_result_hint">输出结果</string>
    <string name="crypto_exception">异常信息：</string>
    <string name="crypto_ecb">ECB</string>
    <string name="crypto_cbc">CBC</string>
    <string name="crypto_base64">Base64</string>
    <string name="crypto_hex">Hex</string>
    <string name="crypto_encryption_mode">加密模式：</string>
    <string name="crypto_output_mode">输出模式：</string>
    <string name="crypto_3des_encrypt">3DES加密</string>
    <string name="crypto_3des_decrypt">3DES解密</string>
    <string name="crypto_aes_encrypt">AES加密</string>
    <string name="crypto_aes_decrypt">AES解密</string>

    <!-- 非对称加密 -->
    <string name="crypto_title_asymmetric">非对称加密</string>
    <string name="crypto_public_key_hint">请输入公钥</string>
    <string name="crypto_private_key_hint">请输入私钥</string>
    <string name="crypto_rsa_encrypt">RSA加密</string>
    <string name="crypto_rsa_decrypt">RSA解密</string>

    <!-- 信息摘要 -->
    <string name="crypto_title_message_digest">信息摘要</string>
    <string name="crypto_message_digest_data_hint">请输入待加密数据</string>
    <string name="crypto_message_digest_key_hint">请输入密钥，Hmac才需要</string>
    <string name="crypto_message_digest_permission">如果您拒绝此权限，将无法选择文件进行MD5加密，请点击授予权限。</string>
    <string name="crypto_md5_file">使用MD5加密文件</string>
    <string name="crypto_md2">MD2</string>
    <string name="crypto_md5">MD5</string>
    <string name="crypto_sha1">SHA1</string>
    <string name="crypto_sha224">SHA224</string>
    <string name="crypto_sha256">SHA256</string>
    <string name="crypto_sha384">SHA384</string>
    <string name="crypto_sha512">SHA512</string>
    <string name="crypto_hmacmd5">HmacMD5</string>
    <string name="crypto_hmacsha1">HmacSHA1</string>
    <string name="crypto_hmacsha224">HmacSHA224</string>
    <string name="crypto_hmacsha256">HmacSHA256</string>
    <string name="crypto_hmacsha384">HmacSHA384</string>
    <string name="crypto_hmacsha512">HmacSHA512</string>

    <!-- 检测模拟器 -->
    <string name="emulator_check">标准模式</string>
    <string name="emulator_check_safely">安全模式</string>
    <string name="emulator_true">是模拟器</string>
    <string name="emulator_false">不是模拟器</string>
</resources>
